# TelescopeWebApp

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DATA.md  README.md  TEAM_WORKFLOW.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: module-task.md
.github/workflows/: ci.yml
analysis_core/: __init__.py
analysis_core/common/: __init__.py
analysis_core/lightcurve/: __init__.py  service.py
analysis_core/skymap/: __init__.py  service.py
analysis_core/spectrum/: README.md  __init__.py  service.py
analysis_core/theta2/: __init__.py  service.py
backend/app/: apps.py  dependencies.py  main.py  urls.py  views.py
backend/app/api/routes/: datasets.py  health.py  lightcurve.py  skymap.py  spectrum.py  theta2.py
backend/app/core/: cache.py  config.py
backend/app/domain/: data_loader.py  dataset_registry.py  provenance.py  schemas.py
backend/config/: settings.py  urls.py
data/: datasets.yml
data/sample/: README.md
data/sample/hess-dl3-dr1/: make.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: Home.py
frontend/pages/: 1_theta2.py  2_skymap.py  3_spectrum.py  4_lightcurve.py
scripts/: create_team_issues.md
tests/smoke/: test_bad_json.py  test_datasets.py  test_health.py  test_theta2_validation.py
tests/unit/: test_architecture_guards.py
tests/unit/skymap/: test_skymap_service.py
tests/unit/spectrum/: energy_spectrum_module_tests.py
tests/unit/test_light_curve/: tests.py
