[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telescope-webapp"
version = "0.1.0"
description = "Web app for Cherenkov telescope DL3 analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django>=5.1,<6.0",
  "gunicorn>=22.0,<23.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "streamlit>=1.39,<2.0",
  "pyyaml>=6.0,<7.0",
  "astropy>=6.0,<7.0",
  "gammapy>=2.0,<3.0",
  "regions>=0.9,<1.0",
  "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.7,<1.0",
  "pandas>=2.0,<3.0",
  "matplotlib>=3.8,<4.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["backend", "."]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["backend*", "analysis_core*"]
exclude = ["tests*", "frontend*", "data*", "docker*"]
